--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "popoki"
 version = "0.1.0"
-authors = ["Luis Cardoso <luis@luiscardoso.dev>"]
 edition = "2021"
+authors = ["Luis Cardoso <luis@luiscardoso.dev>"]
+description = "Popoki (cat in hawaiian) is a faster Wordle solver built in Rust using Information Theory."
+readme = "README.md"
+license-file = "LICENSE.txt"
+repository = "https://github.com/LuisCardosoOliveira/popoki"
+keywords = ["wordle", "solver", "informationtheory", "popoki"]
+categories = ["algorithms", "tools"]
 
 # Profile setup https://doc.rust-lang.org/cargo/reference/profiles.html
 # TL;DR: optimises for code gen size and strip out unnecessary assembly instructions
