feat: add once init implementation
Not actually faster, since bottleneck is the
compute function according to the flamegraphs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ opt-level="s" # optimise for binary size
 [dependencies]
 itertools = "0.10"
 clap = { version = "3", features = ["derive"]}
+once_cell = "1"
